# stocks-rss-feed

./: Dockerfile  README.md  app.py  pyproject.toml
stocks_rss_feed/: stocks.py
stocks_rss_feed/resources/: ind_nifty500list.csv
tests/: test_stocks_rss_feed.py
