[tool.poetry]
name = "stocks-rss-feed"
version = "0.1.0"
description = ""
authors = ["Mark Agustin"]
license = "GNU v3"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
bs4 = "^0.0.1"
spacy = "^3.1.0"
lxml = "^4.6.3"
yfinance = "^0.1.63"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0-py3-none-any.whl"}
pandas = "^1.3.3"
streamlit = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
